大枠はできた

--- a/body.tex
+++ b/body.tex
@@ -1,8 +1,33 @@
 
-% 表題などの出力
+% 和文概要
+\begin{abstract}
+実世界と情報世界を接続し、大学の研究室内での情報共有を便利にするシステムを作成した。
+本システムには3つの機能がある。
+1つ目の機能は、物体を識別する機能である。研究室内では各人が共有物を使って工作や勉強を行っている。また、私物を持ち込む場合もある。しかしそれらの物品は小型な場合が多く、RFIDやバーコードなどのタグを付けると実際の作業の邪魔になってしまう。そこで本研究では、重さを用いて物体を認識するしくみを作成した。2つ目の機能は、物に対してweb上から複数人で情報を付与する機能である。研究室内にある機材には付箋や書き込み以上の注釈を書きたい場合もあるし、写真や映像で使い方を説明したい事もある。3つ目の機能は、web上での情報更新を実世界に通知する機能である。私たちは常にラップトップコンピュータを開いているわけではなく、移動したり、他の作業をしていたりする。一般的に研究室の全員に情報を共有する方法としてメーリングリストを使う事が多いと思うが、そうではなくweb上の情報を主として、その更新通知のみを行うもっと軽い方法が必要だと考えている。
+\end{abstract}
+
+% 英文概要
+\begin{eabstract}
+english english english
+\end{eabstract}
+
 \maketitle
 
 % 本文はここから始まる
 \section{はじめに}\label{sec:Introduction}
+実世界と情報世界をうまく接続して便利にしたい。主に2つ問題がある。物→webへのリンクの仕方と、web上での共同編集の経過の実世界へのフィードバックが既存のシステムでは研究室環境で使うのには不十分だったので作った。
+物→webのリンクについて。物について調べたくても名前がわからないからググれない。そこでバーコードやRFIDつけたりしてweb上の情報と関連付けるのが普通なんだけど、研究室内の小物にはRFID貼るところねーだろ→それ重さIDでできるよ！
+web上の共同編集の経過のフィードバックは、いろんなユーザがいろんなシチュエーションで受け取れるようにしないとだめ。というわけでiPhoneとAndroidとtwitterとパソコン用のIMに対応した。どれか一つは使ってるだろうから大丈夫だろ
 
-あいうえお\cite{total}
+
+\section{関連研究}
+図書館、POS、物流、お茶大のWISSの棚のやつ、RFID、画像認識、バーコード\cite{total}
+
+
+\section{システムの概要}
+物のせる、wiki開く、編集できる、編集がケータイとIMとtwitterに通知される
+
+
+\section{システムの実装}
+はかりがある。Arduinoで重さ読む。重さとIDのDBを参照してwikiページを開く。DBはmongod。wikiはsinatraとtokyocabinetでできている。wikiの更新は定期的にtwitterとiPhoneとAndroidとIMに流れる。便利！！
+githubへのリンクを貼りまくろう。はかりとか更新通知の精度・速度については適当に書く。
