--- a/interaction2011.tex
+++ b/interaction2011.tex
@@ -24,8 +24,8 @@
 増井 俊之\affiref{KEIO_EI}\member{0}}
 
 % 英文著者名
-\eauthor{Sho Hashimoto\affiref{KEIO}\and
-Toshiyuki Masui\affiref{KEIO}}
+\eauthor{Sho Hashimoto\affiref{KEIO_MG}\and
+Toshiyuki Masui\affiref{KEIO_EI}}
 
 % 連絡先（投稿時に必要．製版用では無視される．）
 \contact{橋本 翔\\
