2章まで書いた

--- a/bib.tex
+++ b/bib.tex
@@ -1,51 +1,12 @@
 \begin{thebibliography}{10}
 
-\bibitem{latex}
-Lamport, L.: {\em A Document Preparation System {\LaTeX} User's Guide \&
-  Reference Manual}, Addison Wesley, Reading, Massachusetts (1986).
-\newblock （Cooke, E., et al.訳：文書処理システム {\LaTeX}，アスキー出版局
-  (1990)）.
+\bibitem{mediawiki}
+MediaWiki. http://www.mediawiki.org
 
-\bibitem{total}
-伊藤和人：{\LaTeX} トータルガイド，秀和システムトレーディング (1991).
+\bibitem{gyazz}
+Gyazz. http://gyazz.com
 
-\bibitem{article1}
-桜井貴文：直観主義論理と型理論，情報処理， Vol.~30, No.~6, pp.\ 626--634
-  (1989).
-
-\bibitem{article2}
-野口健一郎，大谷　真：OSIの実現とその課題，情報処理， Vol.~31, No.~9, pp.\
-  1235--1244 (1990).
-
-\bibitem{article3}
-Itoh, S. and Goto, N.: An Adaptive Noiseless Coding for Sources with Big
-  Alphabet Size, {\em Trans. IEICE},  Vol.~E74, No.~9, pp.\ 2495--2503 (1991).
-
-\bibitem{article4}
-田中{正次}，村松　茂，山下　茂：9段数7次陽的Runge-Kutta法の最適化について，情%
-報処理学会論文誌， Vol.~33, No.~12, pp.\ 1512--1526 (1992).
-
-\bibitem{article5}
-Abrahamson, K., Dadoun, N., Kirkpatrick, D.~G. and Przytycka, T.: A Simple
-  Parallel Tree Contraction Algorithm, {\em J. Algorithms},  Vol.~10, No.~2,
-  pp.\ 287--302 (1989).
-
-\bibitem{article6}
-田中{正次}ほか：9段数7次陽的Runge-Kutta法の次数条件式の解について，情報処理学%
-会論文誌， Vol.~33, No.~12, pp.\ 1506--1511 (1992).
-
-\bibitem{book3}
-Chang, C.~L. and Lee, R. C.~T.: {\em Symbolic Logic and Mechanical Theorem
-  Proving}, Academic Press, New York (1973).
-\newblock （長尾真，辻井潤一訳: 計算機による定理の自動証明, 日本コンピュータ%
-  協会 (1983)）.
-
-\bibitem{booklet1}
-新世代コンピュータ技術開発機構：第五世代コンピュータプロジェクトの概要，{FGCS'%
-92}にて配布 (1992).
-
-\bibitem{unpublished}
-情報処理学会論文誌編集委員会：{\LaTeX}による論文作成のガイド（第1版） (1995).
-\newblock （論文著者に配布）.
+\bibitem{imkayac}
+im.kayac.com. http://im.kayac.com
 
 \end{thebibliography}
