--- a/interaction2011.tex
+++ b/interaction2011.tex
@@ -1,5 +1,6 @@
 \documentclass{intpapers}
-\usepackage{graphicx,color}
+\usepackage[dvipdfmx]{graphicx, color}
+\usepackage{mediabb}
 
 \include{util}
 
@@ -33,7 +34,6 @@ Toshiyuki Masui\affiref{KEIO_EI}}
 	慶應義塾大学 環境情報学部\\
 	デルタ館 S112 増井研究室\\
 	email: shokai@sfc.keio.ac.jp}
-
 
 \include{body}
 \include{bib}
