--- a/body.tex
+++ b/body.tex
@@ -1,7 +1,9 @@
 
 % 和文概要
 \begin{abstract}
-実世界と情報世界を接続し，大学の研究室内での情報共有を便利にするシステムを作成した．本システムには3つの機能がある．1つ目の機能は，物体を識別する機能である．研究室内では各人が共有物を使って工作や勉強を行っている．また，私物を持ち込む場合もある．しかしそれらの物品は小型な場合が多く，RFIDやバーコードなどのタグを付けると実際の作業の邪魔になってしまう．そこで本研究では，重さを用いて物体を認識するしくみを作成した．2つ目の機能は，物に対してweb上から複数人で情報を付与する機能である．研究室内にある機材には付箋や書き込み以上の注釈を書きたい場合もあるし，写真や映像で使い方を説明したい事もある．3つ目の機能は，web上での情報更新を実世界に通知する機能である．私たちは常にラップトップコンピュータを開いているわけではなく，移動したり，他の作業をしていたりする．一般的に研究室の全員に情報を共有する方法としてメーリングリストを使う事が多いと思うが，そうではなくweb上の情報を主として，その更新通知のみを行うもっと軽い方法が必要だと考えた．
+実世界と情報世界を接続し，大学の研究室内での情報共有を便利にするシステムを作成した．重さを用いて物体を認識し，関連付けられた
+
+本システムには3つの機能がある．1つ目の機能は，物体を識別する機能である．研究室内では各人が共有物を使って工作や勉強を行っている．また，私物を持ち込む場合もある．しかしそれらの物品は小型な場合が多く，RFIDやバーコードなどのタグを付けると実際の作業の邪魔になってしまう．そこで本研究では，重さを用いて物体を認識するしくみを作成した．2つ目の機能は，物に対してweb上から複数人で情報を付与する機能である．研究室内にある機材には付箋や書き込み以上の注釈を書きたい場合もあるし，写真や映像で使い方を説明したい事もある．3つ目の機能は，web上での情報更新を実世界に通知する機能である．私たちは常にラップトップコンピュータを開いているわけではなく，移動したり，他の作業をしていたりする．一般的に研究室の全員に情報を共有する方法としてメーリングリストを使う事が多いと思うが，そうではなくweb上の情報を主として，その更新通知のみを行うもっと軽い方法が必要だと考えた．
 \end{abstract}
 
 % 英文概要
@@ -15,9 +17,9 @@ english english english
 \section{はじめに}\label{sec:Introduction}
 実世界と情報世界を接続する時に，主に3つの問題がある．物とweb上の知識のリンク方法と，web上でいかに知識を共同編集するかという事，そしてその更新をユーザーにどのようにして通知するかという事である．本論文で説明するシステムでは，大学の研究室という環境において工具や道具などの物体からweb上の知識へと簡単にリンクさせる事ができ，またweb上での知識を共同編集し，その編集過程を研究室のメンバーにリアルタイムに通知する事ができる．
 
-大学の研究室にある特殊な工具についての情報をweb上の情報とリンクさせる際に，まずユーザにとって物の正確な名前がわからないので検索できない事が問題になる．その問題を解決する方法として，
-（ここに関連研究．バーコードの例，RFIDの例，画像検索の例，お茶大のWISS）
-本研究では，物の持つ物理的な特徴である重さを用いて，物体を認識する事にした．物体認識に重さを使う事には以下の2つの利点がある．1つ目は，使いやすい事である．バーコードの様に正しい向きでスキャンする必要が無く，ただはかりに乗せるだけで良い．また画像検索と異なり正面を向けて置く必要もない．2つ目は，物体が最初から持っている物理的特徴を利用するので，タグ等を貼り付ける必要が無い事である．
+大学の研究室にある特殊な工具についての情報をweb上の情報とリンクさせる際に，ユーザが物の正確な名前を知らない為にテキスト検索ができない事が問題になる．Wantらは，実世界の物と情報世界を関連付ける方法としてRFIDを用いる事でこの問題を解決している．\cite{rfid}本やカード等にRFIDタグを付け，それをRFIDリーダーで読むことで関連付けられたアプリケーションを実行できる．stickybits\cite{stickybits}は，商品に付いているバーコードをiPhoneやAndroidなどのスマートフォンのカメラで読み込み，物の上にweb上の情報をオーバーレイさせて表示するアプリケーションである．河村らはユーザの頭部に装着したカメラによる画像認識で，実世界にある物体を部屋の中で探すシステムを作成している．\cite{head_cam} 小松崎らは，大学の研究室内での収納箱の中の物体の位置を探す方法として，物の出し入れを記録できる棚を実装している．\cite{drawer}
+
+本研究では，物の持つ物理的な特徴である重さを用いて物体を認識する事にした．物体認識に重さを使う事には以下の2つの利点がある．1つ目は，使いやすい事である．バーコードの様に正しい向きでスキャンする必要が無く，ただはかりの上に乗せるだけで良い．また画像検索と異なり正面を向けて認識させる必要もない．2つ目は，物体が最初から持っている物理的特徴を利用するので，タグ等を貼り付ける必要が無い事である．タグを貼り付けないので，手で使う工具を使用する際の邪魔にならず，タグが剥がれて紛失してしまう事もない．
 
 web上での知識の共同編集方法の代表的な物としてはwikiが挙げられる．MediaWiki\cite{mediawiki}等のwikiには更新通知機能があるが，その通知方法はメールで定期的にまとめて通知されるものである．しかし，研究室のメンバーはそれぞれがパソコンに向かっていたり，移動していたり，電子工作をしていたりする．つまり既存のwikiとその更新通知システムでは，多様な状態を持つユーザに対してリアルタイムな更新通知ができない．本研究では，webサービスとして実装されたアウトラインエディタと，様々なメディアに適切なフォーマットで更新通知するシステムにより，この問題を解決した．
 
@@ -99,8 +101,8 @@ gyazz-checkerはRubyスクリプトで実装されている．gyazzおよびgyaa
 
 \begin{thebibliography}{10}
 
-\bibitem{mediawiki}
-MediaWiki. http://www.mediawiki.org
+\bibitem{arduino}
+Arduino. http://arduino.cc
 
 \bibitem{gyazz}
 Gyazz. http://gyazz.com
@@ -108,8 +110,11 @@ Gyazz. http://gyazz.com
 \bibitem{imkayac}
 im.kayac.com. http://im.kayac.com
 
-\bibitem{arduino}
-Arduino. http://arduino.cc
+\bibitem{jQuery}
+jQuery. http://jquery.com
+
+\bibitem{mediawiki}
+MediaWiki. http://www.mediawiki.org
 
 \bibitem{mongodb}
 MongoDB. http://www.mongodb.org
@@ -117,11 +122,20 @@ MongoDB. http://www.mongodb.org
 \bibitem{sinatra}
 Sinatra. http://www.sinatrarb.com
 
-\bibitem{jQuery}
-jQuery. http://jquery.com
+\bibitem{stickybits}
+stickybits. http://www.stickybits.com
 
 \bibitem{tc}
 TokyoCabinet. http://fallabs.com/tokyocabinet/
+
+\bibitem{rfid}
+Want, R. Fishkin, K. Gujar, A. Harrison, B.: Bridging physical and virtual worlds with electronic tags. CHI99, pp.370-377 (1999).
+
+\bibitem{drawer}
+小松崎瑞穂, 塚田浩二, 椎尾一郎: DrawerFinder:収納箱用物探し支援システム, 日本ソフトウェア科学会 WISS2010, pp.213-215 (2010).
+
+\bibitem{head_cam}
+河村竜幸, 上岡隆宏, 河野恭之, 木戸出正継: 頭部装着カメラを用いた物探し支援システムにおける視野角の影響, 情報処理学会論文誌 48(3), pp.1336-1348 (2007).
 
 \end{thebibliography}
 
