--- a/interaction2011.tex
+++ b/interaction2011.tex
@@ -11,8 +11,8 @@
 \begin{document}
 
 
-\title{重さを物体識別IDとして用いるメモ共有システム}
-\etitle{Memo shareing sytem uses mass as ID to detect Object}
+\title{重さを物体識別IDとして用いたweb上での文書共有システム}
+\etitle{Note sharing sytem on Web using mass as ID to detect Object}
 
 
 \affilabel{KEIO_MG}{慶應義塾大学 政策メディア研究科\\Keio University, Graduate School of Media and Governance}
@@ -20,8 +20,8 @@
 
 
 % 和文著者名
-\author{%
-橋本 翔\affiref{KEIO_MG}\member{0}\and
+\author{
+橋本　翔\affiref{KEIO_MG}\member{0}\and
 増井 俊之\affiref{KEIO_EI}\member{0}}
 
 % 英文著者名
