--- a/interaction2011.tex
+++ b/interaction2011.tex
@@ -12,7 +12,7 @@
 
 
 \title{重さを物体識別IDとして用いたweb上での文書共有システム}
-\etitle{Note sharing sytem on Web using mass as ID to detect Object}
+\etitle{Note sharing sytem on the Web using mass as ID to detect Object}
 
 
 \affilabel{KEIO_MG}{慶應義塾大学 政策メディア研究科\\Keio University, Graduate School of Media and Governance}
