--- a/body.tex
+++ b/body.tex
@@ -1,14 +1,12 @@
 
 % 和文概要
 \begin{abstract}
-実世界と情報世界を接続し，大学の研究室内での情報共有を便利にするシステムを作成した．重さを用いて物体を認識し，関連付けられた
-
-本システムには3つの機能がある．1つ目の機能は，物体を識別する機能である．研究室内では各人が共有物を使って工作や勉強を行っている．また，私物を持ち込む場合もある．しかしそれらの物品は小型な場合が多く，RFIDやバーコードなどのタグを付けると実際の作業の邪魔になってしまう．そこで本研究では，重さを用いて物体を認識するしくみを作成した．2つ目の機能は，物に対してweb上から複数人で情報を付与する機能である．研究室内にある機材には付箋や書き込み以上の注釈を書きたい場合もあるし，写真や映像で使い方を説明したい事もある．3つ目の機能は，web上での情報更新を実世界に通知する機能である．私たちは常にラップトップコンピュータを開いているわけではなく，移動したり，他の作業をしていたりする．一般的に研究室の全員に情報を共有する方法としてメーリングリストを使う事が多いと思うが，そうではなくweb上の情報を主として，その更新通知のみを行うもっと軽い方法が必要だと考えた．
+実世界の物体と情報世界の知識を接続し，大学の研究室内での情報共有を便利にするシステムを作成した．ユーザははかりに物を乗せる事で，物体とwebページを関連付けられる．またweb上で文書を編集し，その更新をデバイス毎に最適な形式で受信できる．
 \end{abstract}
 
 % 英文概要
 \begin{eabstract}
-english english english
+We have developed a system that bridges the missing link between physical objects in the laboratory and their information on the Web. Users can create a link between an object and an Web page just by putting the object on a scale, and add information to the Web page. Users can then receive device-dependent notification messages when the information is updated.
 \end{eabstract}
 
 \maketitle
